tests/lean/versoDocMissing.lean.expected.out
versoDocMissing.lean:10:0: error: unexpected end of input; expected `#guard_msgs`, `abbrev`, `add_decl_doc`, `axiom`, `binder_predicate`, `builtin_dsimproc_decl`, `builtin_dsimproc`, `builtin_grind_propagator`, `builtin_initialize`, `builtin_simproc_decl`, `builtin_simproc`, `class`, `coinductive`, `declare_simp_like_tactic`, `declare_syntax_cat`, `def`, `dsimproc_decl`, `dsimproc`, `elab_rules`, `elab`, `example`, `grind_propagator`, `inductive`, `infix`, `infixl`, `infixr`, `initialize`, `instance`, `macro_rules`, `macro`, `notation`, `opaque`, `postfix`, `prefix`, `recommended_spelling`, `register_error_explanation`, `register_tactic_tag`, `register_try?_tactic`, `simproc_decl`, `simproc`, `structure`, `syntax`, `tactic_extension`, `theorem` or `unif_hint`
